<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto">
    <data>
    </data>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--顶部播放列表-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/musicList"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>
        <!--底部播放器操作按钮-->
        <LinearLayout
            android:background="?colorPrimary"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.facebook.drawee.view.SimpleDraweeView
                android:layout_gravity="center_vertical"
                fresco:roundedCornerRadius="2dp"
                android:id="@+id/musicCover"
                android:layout_width="@dimen/dp_80"
                android:layout_height="@dimen/dp_80"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_marginBottom="@dimen/dp_5"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/musicName"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/sp_17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/musicArtist"
                        android:layout_marginStart="@dimen/dp_10"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/sp_14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <!--  播放进度  -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <SeekBar
                        android:id="@+id/currentprocess"
                        android:theme="@style/MySeekBar"
                        android:progressBackgroundTint="@color/colorWhite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <!-- 播放按钮 -->
                <LinearLayout
                    android:layout_marginBottom="@dimen/dp_5"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <ImageButton
                            android:foreground="?android:attr/selectableItemBackgroundBorderless"
                            android:id="@+id/previous"
                            android:layout_gravity="center"
                            android:background="@drawable/ic_skip_previous"
                            android:layout_width="@dimen/dp_35"
                            android:layout_height="@dimen/dp_35"
                            android:contentDescription="@string/previous" />
                    </LinearLayout>
                    <LinearLayout
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <ImageButton
                            android:foreground="?android:attr/selectableItemBackgroundBorderless"
                            android:id="@+id/play"
                            android:layout_gravity="center"
                            android:background="@drawable/ic_play"
                            android:layout_width="@dimen/dp_35"
                            android:layout_height="@dimen/dp_35"
                            android:contentDescription="@string/play" />
                    </LinearLayout>
                    <LinearLayout
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <ImageButton
                            android:foreground="?android:attr/selectableItemBackgroundBorderless"
                            android:id="@+id/next"
                            android:layout_gravity="center"
                            android:background="@drawable/ic_skip_next"
                            android:layout_width="@dimen/dp_35"
                            android:layout_height="@dimen/dp_35"
                            android:contentDescription="@string/next" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>